# minecraft

./: .gitmodules  CMakeLists.txt  cmake.sh
include/mc/: asserts.hpp  logger.hpp  timer.hpp  utils.hpp
include/mc/renderer/backend/: allocator.hpp  async_loader.hpp  basisu_transcoder.hpp  buffer.hpp  command.hpp  constants.hpp  descriptor.hpp  device.hpp  gltfloader.hpp  image.hpp  pipeline.hpp  renderer_backend.hpp  resource.hpp  shader.hpp  texture.hpp  utils.hpp  vk_checker.hpp  vma.hpp
include/mc/renderer/backend/gltf/: animation.hpp  boundingBox.hpp  constants.hpp  gltfTextures.hpp  loader.hpp  material.hpp  mesh.hpp  node.hpp
lib/: CMakeLists.txt
lib/basisu/: CMakeLists.txt
lib/basisu/transcoder/: basisu_containers.h
models/bedroom/: license.txt  scene.gltf
shaders/: common.glsl  fs.frag  vs.vert
src/: main.cpp  timer.cpp
src/game/: game.cpp
src/renderer/: renderer.cpp
src/renderer/backend/: buffer.cpp  command.cpp  descriptor.cpp  device.cpp  gltfloader.cpp  image.cpp  instance.cpp  pipeline.cpp  render.cpp  renderer_backend.cpp  shader.cpp  surface.cpp  swapchain.cpp  texture.cpp  utils.cpp
src/renderer/backend/gltf/: animation.cpp  boundingBox.cpp  gltfTextures.cpp  loader.cpp  material.cpp  mesh.cpp  node.cpp
